logs/rating_ods_load-2020-02-17_10.02.06.log
###################################################################################################################################
###################################################################################################################################
Load to stage in progress
###################################################################################################################################
###################################################################################################################################
20/02/17 10:02:12 WARN Utils: Your hostname, DESKTOP-502C4I4 resolves to a loopback address: 127.0.1.1; using 192.168.1.25 instead (on interface wifi0)
20/02/17 10:02:12 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address
20/02/17 10:02:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
  File "/edw/Reviews/SourceCode/python/rating_ods_load.py", line 54
    Loading in ProdMeta from Staging Schema for load of fact table
                           ^
SyntaxError: invalid syntax
log4j:WARN No appenders could be found for logger (org.apache.spark.util.ShutdownHookManager).
log4j:WARN Please initialize the log4j system properly.
log4j:WARN See http://logging.apache.org/log4j/1.2/faq.html#noconfig for more info.
